# sphinx-cmake_domain

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
locale/: sphinx-cmake_domain.pot
locale/de_DE/LC_MESSAGES/: sphinx-cmake_domain.mo  sphinx-cmake_domain.po
sphinx_ext/: cmake_domain.py
sphinx_ext/cmake_domain/: __init__.py
sphinx_ext/locale/: sphinx-cmake_domain.pot
sphinx_ext/locale/de/LC_MESSAGES/: sphinx-cmake_domain.po
sphinx_ext/locale/de_DE/LC_MESSAGES/: sphinx-cmake_domain.po
test/: conf.py  index.rst
