[metadata]
name = sphinx-cmake_domain
author = Marco Koch
author_email = marco-koch@t-online.de
url = https://github.com/marcokoch/sphinx-cmake_domain
project_urls =
    Source = https://github.com/marcokoch/sphinx-cmake_domain
    Issue tracker = https://github.com/marcokoch/sphinx-cmake_domain/issues
description = A Sphinx extension that adds a CMake domain
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Education
    Topic :: Text Processing
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Software Development
    Topic :: Software Development :: Documentation
    Topic :: Utilities
keywords = sphinx, extension, documentation, cmake, domain
platforms = any
python_requires = >=3.5, <4

[options]
zip_safe = False
packages = sphinx_ext
namespace_packages = sphinx_ext
install_requires = Sphinx >= 3.0.4

[options.package_data]
* = locale/*/*/*.mo

[extract_messages]
keywords = __
output_file = sphinx_ext/locale/sphinx-cmake_domain.pot
input_paths = sphinx_ext/cmake_domain.py
omit-header = 1

[init_catalog]
domain = sphinx-cmake_domain
output_dir = sphinx_ext/locale
input_file = sphinx_ext/locale/sphinx-cmake_domain.pot

[update_catalog]
domain = sphinx-cmake_domain
output_dir = sphinx_ext/locale
input_file = sphinx_ext/locale/sphinx-cmake_domain.pot

[compile_catalog]
domain = sphinx-cmake_domain
directory = sphinx_ext/locale
